--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                               <div class="col-lg-8 col-md-9 ">
                                  <div class="build_box">
                                     <h1>Catalyst <span class="orang"> Application</span></h1>
-                                    <a class="read_more quote_btn" href="https://github.com/Be4nis/BZ--Chemistry-Culminating-Assignment" role="button">Github</a>
+                                    <a class="read_more quote_btn" href="https://github.com/Be4nis/" role="button">Github</a>
                                  </div>
                               </div>
                            </div>
