--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             font-size: 100px;
             }
          </style>
-         <h1 id="fire-text" style="text-align: center;">Application Video</h1>
+         <h1 id="fire-text" style="text-align: center;">Personal Video</h1>
          <div class="container ">
             <div class="row d_flex">
 
