--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 						<header>
 							<h2>Insulin</h2>
 						</header>
-						<p>Frederick Banting
-						<br />
 						<br />
 						Project by Brian Zhang</p>
 
@@ -41,14 +39,14 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2><strong>Lifecycle flowchart</strong></h2>
+								<h2><strong>Lifecycle Flowchart - Synthetic Insulin</strong></h2>
 							</header>
 
 							<div class="row">
 								<div class="col-12">
 									<h3>Extraction</h3>
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="https://imgs.search.brave.com/PilX9vpLrqQDiKdwfS1bcSGc0MIrgsifPnp5EAlrlT0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/bWFkZWhvdy5jb20v/aW1hZ2VzL2hwbV8w/MDAwXzAwMDdfMF9p/bWcwMDYxLmpwZw" alt="" /></a>
 										<header>
 										</header>
 									</section>
