--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
 
 							<header class="major">
 								<h2><strong>Lifecycle Flowchart - Synthetic Insulin</strong></h2>
+								<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FkgciKO4aWFQtEP2Yck3qYn%2FInsulin%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DON1VE7h6nfyjMhaX-1" allowfullscreen></iframe>
 							</header>
 
 							<div class="row">
 								<div class="col-12">
 									<h3>Extraction</h3>
 									<section>
-										<a href="#" class="image featured"><img src="https://imgs.search.brave.com/PilX9vpLrqQDiKdwfS1bcSGc0MIrgsifPnp5EAlrlT0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/bWFkZWhvdy5jb20v/aW1hZ2VzL2hwbV8w/MDAwXzAwMDdfMF9p/bWcwMDYxLmpwZw" alt="" /></a>
-										<header>
-										</header>
 									</section>
 
 								</div>
