--- a/index.html
+++ b/index.html
@@ -1,124 +1,220 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Insulin - Brian Zhang</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="https://imgs.search.brave.com/vrPIX2KbO_MFkr3d3KVZ_TEvvalqI8fZvArdXc0g-II/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTU3/NDg0ODkxL3Bob3Rv/L21vZGVsLW9mLWh1/bWFuLWluc3VsaW4u/anBnP3M9NjEyeDYx/MiZ3PTAmaz0yMCZj/PVctd3VuSWJQVlg1/SElfekcxbWlrSWZI/c2wtUmJiMkhnc1BM/Mm9uREpCNkk9">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="index is-preload">
-		<div id="page-wrapper">
-				<section id="banner">
-					<div class="inner">
 
-						<header>
-							<h2>Insulin</h2>
-						</header>
-						<br />
-						Project by Brian Zhang</p>
+<head>
+	<title>Insulin - Brian Zhang</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon"
+		href="https://imgs.search.brave.com/vrPIX2KbO_MFkr3d3KVZ_TEvvalqI8fZvArdXc0g-II/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTU3/NDg0ODkxL3Bob3Rv/L21vZGVsLW9mLWh1/bWFuLWluc3VsaW4u/anBnP3M9NjEyeDYx/MiZ3PTAmaz0yMCZj/PVctd3VuSWJQVlg1/SElfekcxbWlrSWZI/c2wtUmJiMkhnc1BM/Mm9uREpCNkk9">
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="index is-preload">
+	<div id="page-wrapper">
+		<section id="banner">
+			<div class="inner">
+
+				<header>
+					<h2>Insulin</h2>
+				</header>
+				<br />
+				<p>Project by Brian Zhang</p>
+
+			</div>
+
+		</section>
+
+		<!-- Main -->
+		<article id="main">
+			<!--<header class="special container">
+						<img src="Insulin.png">
+					</header>-->
+
+			<!-- One -->
+
+			<section class="wrapper style2 container special">
+				<header class="major">
+					<h1
+						style="background-color: gray; padding: 1em; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: xx-large; border-radius: 10em;">
+						Interactive 3-D Insulin Model</h1>
+					<div id="my-div">
+						<iframe id="my-iframe" scrolling="no" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000"
+							height="650" src="https://www.rcsb.org/3d-view/3E7Y/1" allowfullscreen></iframe>
 
 					</div>
+				</header>
+				<button type="button" class="collapsible" style="text-align: center;">More Information</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+						Insulin is a peptide hormone, meaning the primary strucutre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with the amino group of another amino acid, a covalent bond is formed and a molecule of water is released, as shown in the model. 
+						<br>
+						<br>
+						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are linked by two disulfide bonds. 
+					</p>
+				</div>
+				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
+				<div class="content" style="background-color: gray;">
+					<br>
+					<p style="font-size: small;">
+						(4S)-4-[[2-[[(1R,6R,12S,15S,18S,21S,24S,27S,30S,33S,36S,39S,42R,47R,50S,53S,56S,59S,62S,65S,68S,71S,74S,77S,80S,83S,88R)-88-[[(2S)-5-amino-2-[[(2S)-2-[[(2S)-2-[[(2S,3R)-2-[(2-aminoacetyl)amino]-3-methylpentanoyl]amino]-3-methylbutanoyl]amino]-4-carboxybutanoyl]amino]-5-oxopentanoyl]amino]-6-[[(2S)-2-[[(2S)-2-[[(2S)-5-amino-2-[[(2S)-3-amino-2-[[(2S)-2-[[(2S)-2-amino-3-phenylpropanoyl]amino]-3-methylbutanoyl]amino]-3-oxopropanoyl]amino]-5-oxopentanoyl]amino]-3-(1H-imidazol-4-yl)propanoyl]amino]-4-methylpentanoyl]amino]-47-[[(1S)-3-amino-1-carboxy-3-oxopropyl]carbamoyl]-53-(2-amino-2-oxoethyl)-62-(3-amino-3-oxopropyl)-77-[(2R)-butan-2-yl]-24,56-bis(2-carboxyethyl)-83-[(1S)-1-hydroxyethyl]-12,71,80-tris(hydroxymethyl)-33,50,65-tris[(4-hydroxyphenyl)methyl]-15-(1H-imidazol-4-ylmethyl)-27-methyl-18,30,36,59,68-pentakis(2-methylpropyl)-7,10,13,16,19,22,25,28,31,34,37,40,49,52,55,58,61,64,67,70,73,76,79,82,85,87-hexacosaoxo-21,39-di(propan-2-yl)-3,4,44,45,90,91-hexathia-8,11,14,17,20,23,26,29,32,35,38,41,48,51,54,57,60,63,66,69,72,75,78,81,84,86-hexacosazabicyclo[72.11.7]dononacontane-42-carbonyl]amino]acetyl]amino]-5-[[(2S)-1-[[2-[[(2S)-1-[[(2S)-1-[[(2S)-1-[[(2S,3S)-1-[(2S)-2-[[(2S)-6-amino-1-[[(1S,2S)-1-carboxy-2-hydroxypropyl]amino]-1-oxohexan-2-yl]carbamoyl]pyrrolidin-1-yl]-3-hydroxy-1-oxobutan-2-yl]amino]-3-(4-hydroxyphenyl)-1-oxopropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-2-oxoethyl]amino]-5-carbamimidamido-1-oxopentan-2-yl]amino]-5-oxopentanoic acid
+					</p>
+					<br>
+					<h1>IUPAC:</h1>
+					<br>
+					<p>L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine (7->7'),(19->20')-bis(disulfide) compound with glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine (6'->11')-disulfide</p>
+				</div>
+			</section>
 
-				</section>
 
-			<!-- Main -->
-				<article id="main">
-					<header class="special container">
-						Describe Insulin Here
-					</header>
+			<!-- Three -->
+			<section class="wrapper style3 container special">
 
-					<!-- One -->
-						<section class="wrapper style2 container special-alt">
-							Main Chemical Organic Molecule Section
+				<header class="major">
+					<h2><strong>Lifecycle Flowchart - Synthetic Insulin</strong></h2>
+					<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+						src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FkgciKO4aWFQtEP2Yck3qYn%2FInsulin%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DON1VE7h6nfyjMhaX-1"
+						allowfullscreen></iframe>
+
+				</header>
+
+				<div class="row">
+					<div class="col-12">
+						<h3>Extraction</h3>
+						<section>
 						</section>
 
-					
-					<!-- Three -->
-						<section class="wrapper style3 container special">
+					</div>
+				</div>
 
-							<header class="major">
-								<h2><strong>Lifecycle Flowchart - Synthetic Insulin</strong></h2>
-								<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FkgciKO4aWFQtEP2Yck3qYn%2FInsulin%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DON1VE7h6nfyjMhaX-1" allowfullscreen></iframe>
+				<div class="row">
+					<div class="col-12">
+						<h3>Manufacturing</h3>
+						<section>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<header>
 							</header>
-
-							<div class="row">
-								<div class="col-12">
-									<h3>Extraction</h3>
-									<section>
-									</section>
-
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-12">
-									<h3>Manufacturing</h3>
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-										</header>
-									</section>
-
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-12">
-									<h3>Distribution:</h3>
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-										</header>
-									</section>
-
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-12">
-									<h3>Use:</h3>
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-										</header>
-									</section>
-
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-12">
-									<h3>Disposal</h3>
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-										</header>
-									</section>
-
-								</div>
-							</div>
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">Back to Top</a></li>
-								</ul>
-							</footer>
-
 						</section>
 
-				</article>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<h3>Distribution:</h3>
+						<section>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<header>
+							</header>
+						</section>
 
-			
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12">
+						<h3>Use:</h3>
+						<section>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<header>
+							</header>
+						</section>
+
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-12">
+						<h3>Disposal</h3>
+						<section>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<header>
+							</header>
+						</section>
+
+					</div>
+				</div>
+
+				<footer class="major">
+					<ul class="buttons">
+						<li><a href="#" class="button">Back to Top</a></li>
+					</ul>
+				</footer>
+
+			</section>
+
+		</article>
+
+
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script>
+			var coll = document.getElementsByClassName("collapsible");
+			var i;
 
-	</body>
+			for (i = 0; i < coll.length; i++) {
+				coll[i].addEventListener("click", function () {
+					this.classList.toggle("active");
+					var content = this.nextElementSibling;
+					if (content.style.display === "block") {
+						content.style.display = "none";
+					} else {
+						content.style.display = "block";
+					}
+				});
+			}
+		</script>
+
+		<style>
+			#my-div {
+				width: 70vw;
+				height: 65vh;
+				overflow: hidden;
+				position: relative;
+			}
+
+			#my-iframe {
+				position: absolute;
+				top: -600px;
+				left: -50px;
+				width: 1280px;
+				height: 1200px;
+			}
+
+			.collapsible {
+				background-color: #777;
+				color: white;
+				cursor: pointer;
+				padding: 18px;
+				width: 100%;
+				border: none;
+				text-align: left;
+				outline: none;
+				font-size: 15px;
+			}
+
+			.active,
+			.collapsible:hover {
+				background-color: #555;
+			}
+
+			.content {
+				padding: 0 18px;
+				display: none;
+				overflow: hidden;
+				background-color: #f1f1f1;
+			}
+		</style>
+</body>
+
 </html>
