--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-						Insulin is a peptide hormone, meaning the primary strucutre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with the amino group of another amino acid, a covalent bond is formed and a molecule of water is released, as shown in the model. 
+						Insulin is a peptide hormone, meaning the primary strucutre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
 						<br>
 						<br>
-						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are linked by two disulfide bonds. 
+						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are being covalently connected by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
 					</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
@@ -67,6 +67,16 @@
 					<h1>IUPAC:</h1>
 					<br>
 					<p>L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine (7->7'),(19->20')-bis(disulfide) compound with glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine (6'->11')-disulfide</p>
+				</div>
+				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun? Facts</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">		
+					<p style="">
+						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
+					</p>			
+					<img src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
+
 				</div>
 			</section>
 
@@ -81,62 +91,39 @@
 						allowfullscreen></iframe>
 
 				</header>
-
-				<div class="row">
-					<div class="col-12">
-						<h3>Extraction</h3>
-						<section>
-						</section>
-
-					</div>
+				<button type="button" class="collapsible" style="text-align: center;">Production(Within the Human Body)</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p></p>
 				</div>
 
-				<div class="row">
-					<div class="col-12">
-						<h3>Manufacturing</h3>
-						<section>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-							</header>
-						</section>
 
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12">
-						<h3>Distribution:</h3>
-						<section>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-							</header>
-						</section>
-
-					</div>
+				<button type="button" class="collapsible" style="text-align: center;">Manufacturing (Synthetic Insulin)</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p></p>
 				</div>
 
-				<div class="row">
-					<div class="col-12">
-						<h3>Use:</h3>
-						<section>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-							</header>
-						</section>
 
-					</div>
+				<button type="button" class="collapsible" style="text-align: center;">Distribution</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p></p>
 				</div>
 
-				<div class="row">
-					<div class="col-12">
-						<h3>Disposal</h3>
-						<section>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-							</header>
-						</section>
 
-					</div>
+				<button type="button" class="collapsible" style="text-align: center;">Use</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p></p>
 				</div>
+
+				<button type="button" class="collapsible" style="text-align: center;">Disposal</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p></p>
+				</div>
+
 
 				<footer class="major">
 					<ul class="buttons">
