--- a/index.html
+++ b/index.html
@@ -72,14 +72,18 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">		
-					<p style="">
+					<p>
 						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
 					</p>			
 					<img src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
-
+					<p>
+						The diagram above is of insulin, it acurately shows the different amino acids present in the compound and the disulfide bonds formed between the amino acids.
+					</p>
+					<img src="lewisdrawing.pdf">
+						The image above is my drawing of the lewis structure for the insulin. The molecular formula for insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
 				</div>
 			</section>
-
+ 
 
 			<!-- Three -->
 			<section class="wrapper style3 container special">
