--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<button type="button" class="collapsible" style="text-align: center;">More Information</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+					<p style="color:black">
 						Insulin is a peptide hormone, meaning the primary strucutre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
 						<br>
 						<br>
@@ -60,27 +60,29 @@
 				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
 				<div class="content" style="background-color: gray;">
 					<br>
-					<p style="font-size: small;">
+					<p style="font-size: small; color: black">
 						(4S)-4-[[2-[[(1R,6R,12S,15S,18S,21S,24S,27S,30S,33S,36S,39S,42R,47R,50S,53S,56S,59S,62S,65S,68S,71S,74S,77S,80S,83S,88R)-88-[[(2S)-5-amino-2-[[(2S)-2-[[(2S)-2-[[(2S,3R)-2-[(2-aminoacetyl)amino]-3-methylpentanoyl]amino]-3-methylbutanoyl]amino]-4-carboxybutanoyl]amino]-5-oxopentanoyl]amino]-6-[[(2S)-2-[[(2S)-2-[[(2S)-5-amino-2-[[(2S)-3-amino-2-[[(2S)-2-[[(2S)-2-amino-3-phenylpropanoyl]amino]-3-methylbutanoyl]amino]-3-oxopropanoyl]amino]-5-oxopentanoyl]amino]-3-(1H-imidazol-4-yl)propanoyl]amino]-4-methylpentanoyl]amino]-47-[[(1S)-3-amino-1-carboxy-3-oxopropyl]carbamoyl]-53-(2-amino-2-oxoethyl)-62-(3-amino-3-oxopropyl)-77-[(2R)-butan-2-yl]-24,56-bis(2-carboxyethyl)-83-[(1S)-1-hydroxyethyl]-12,71,80-tris(hydroxymethyl)-33,50,65-tris[(4-hydroxyphenyl)methyl]-15-(1H-imidazol-4-ylmethyl)-27-methyl-18,30,36,59,68-pentakis(2-methylpropyl)-7,10,13,16,19,22,25,28,31,34,37,40,49,52,55,58,61,64,67,70,73,76,79,82,85,87-hexacosaoxo-21,39-di(propan-2-yl)-3,4,44,45,90,91-hexathia-8,11,14,17,20,23,26,29,32,35,38,41,48,51,54,57,60,63,66,69,72,75,78,81,84,86-hexacosazabicyclo[72.11.7]dononacontane-42-carbonyl]amino]acetyl]amino]-5-[[(2S)-1-[[2-[[(2S)-1-[[(2S)-1-[[(2S)-1-[[(2S,3S)-1-[(2S)-2-[[(2S)-6-amino-1-[[(1S,2S)-1-carboxy-2-hydroxypropyl]amino]-1-oxohexan-2-yl]carbamoyl]pyrrolidin-1-yl]-3-hydroxy-1-oxobutan-2-yl]amino]-3-(4-hydroxyphenyl)-1-oxopropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-2-oxoethyl]amino]-5-carbamimidamido-1-oxopentan-2-yl]amino]-5-oxopentanoic acid
 					</p>
 					<br>
-					<h1>IUPAC:</h1>
+					<h1 style="color:black">IUPAC:</h1>
 					<br>
-					<p>L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine (7->7'),(19->20')-bis(disulfide) compound with glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine (6'->11')-disulfide</p>
+					<p style="color:black">L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine (7->7'),(19->20')-bis(disulfide) compound with glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine (6'->11')-disulfide</p>
 				</div>
-				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun? Facts</button>
+				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun Facts?</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">		
-					<p>
+					<p style="color:black">
 						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
 					</p>			
 					<img src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
-					<p>
+					<p style="color:black">
 						The diagram above is of insulin, it acurately shows the different amino acids present in the compound and the disulfide bonds formed between the amino acids.
 					</p>
 					<img src="lewisdrawing.pdf">
-						The image above is my drawing of the lewis structure for the insulin. The molecular formula for insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
+						<p style="color:black">
+							The image above is my drawing of the lewis structure for the insulin. The molecular formula for insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
+						</p>
 				</div>
 			</section>
  
@@ -98,11 +100,15 @@
 				<button type="button" class="collapsible" style="text-align: center;">Production(Within the Human Body)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p></p>
+					<p style="color:black;">Within the human body, glucose enters the beta cells which creates insulin. </p>
 				</div>
 
-
-				<button type="button" class="collapsible" style="text-align: center;">Manufacturing (Synthetic Insulin)</button>
+				<button type="button" class="collapsible" style="text-align: center;">Production(Synthetic Insulin)</button>
+				<div class="content" style="background-color: rgb(180, 178, 178);">
+					<br>
+					<p style="color:black;">Within the human</p>
+				</div>
+				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p></p>
@@ -112,26 +118,40 @@
 				<button type="button" class="collapsible" style="text-align: center;">Distribution</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p></p>
+					<p>
+						Within our body insulin is distributed throughout he blood stream and moves glucose from our blood to our liver. 
+
+						<br><br>
+						Insulin pumps and other diabetic medications are distributed over the counter. 
+					</p>
 				</div>
 
 
 				<button type="button" class="collapsible" style="text-align: center;">Use</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p></p>
+					<p style="color: black">
+						Insulin is an extremely important part of our digestive system as it moves around glucose cells and balances the amount of blood sugar we have throughout our system. When people don't have enough insulin in their system, they must increase their insulin intake through insulin pumps.
+						<br><br>
+						After insulin is created and used, our body disposes of it through metabolic waste. Insulin helped store energy as glycogen, which is used in the creation of insulin. This may be considered both a closed and open loop: The creation of insulin in our body is an open loop as we take in carbohydrates, create glucose, which triggers our pancreas to create insulin to balance the glucose in our body. Finally the insulin is disposed of through metabolic waste. However, insulin is how our cells get energy which is needed in the process of creating insulin.
+					</p>
 				</div>
 
 				<button type="button" class="collapsible" style="text-align: center;">Disposal</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p></p>
+					<p style="color: black">
+						In our body insulin is disposed of through metabolic waste.
+						
+						<br><br>
+						Insulin pumps and such are bio-hazardous sharps as they get infected with blood. This means they must be incinerated in order to be properly disposed of. 
+					</p>
 				</div>
 
 
 				<footer class="major">
 					<ul class="buttons">
-						<li><a href="#" class="button">Back to Top</a></li>
+						<li><a href="" class="button">Sources</a></li>
 					</ul>
 				</footer>
 
