--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 						<br>
 						<br>
 						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are being covalently connected by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
+						<br>
+						<br>
+						Insulin is a <strong>PROTEIN.</strong>
 					</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
