--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black">
-						Insulin is a peptide hormone, meaning the primary strucutre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
+						Insulin is a peptide hormone, meaning the primary structre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
 						<br>
 						<br>
 						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are being covalently connected by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
@@ -85,6 +85,8 @@
 					<img src="lewisdrawing.pdf">
 						<p style="color:black">
 							The image above is my drawing of the lewis structure for the insulin. The molecular formula for insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
+
+							The key structural features of insulin are peptide bonds between each amino acid and disulfide bonds between chain A and chain B. 
 						</p>
 				</div>
 			</section>
