--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 				<footer class="major">
 					<ul class="buttons">
-						<li><a href="" class="button">Sources</a></li>
+						<li><a href="https://docs.google.com/document/d/1rqcobhy8M5R-1Q0aZbxaagLns5j56HCiJM86cPlLSkA/edit?usp=sharing" class="button">Sources</a></li>
 					</ul>
 				</footer>
 
@@ -190,7 +190,6 @@
 				});
 			}
 		</script>
-
 		<style>
 			#my-div {
 				width: 70vw;
