--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black">
-						Insulin is a peptide hormone, meaning the primary structre of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
+						Insulin is a peptide hormone, meaning the primary structure of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
 						<br>
 						<br>
 						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are being covalently connected by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
@@ -123,7 +123,7 @@
 				<button type="button" class="collapsible" style="text-align: center;">Distribution</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p>
+					<p style="color:black;">
 						Within our body insulin is distributed throughout he blood stream and moves glucose from our blood to our liver. 
 
 						<br><br>
@@ -193,7 +193,7 @@
 		<style>
 			#my-div {
 				width: 70vw;
-				height: 65vh;
+				height: 67vh;
 				overflow: hidden;
 				position: relative;
 			}
