--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
 						allowfullscreen></iframe>
 
 				</header>
-				<button type="button" class="collapsible" style="text-align: center;">Production(Within the Human Body)</button>
+				<button type="button" class="" style="text-align: center;">Production(Within the Human Body)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black;">Within the human body, glucose enters the beta cells which creates insulin. </p>
 				</div>
 
-				<button type="button" class="collapsible" style="text-align: center;">Production(Synthetic Insulin)</button>
+				<button type="button" class="" style="text-align: center;">Production(Synthetic Insulin)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black;">Within the human</p>
 				</div>
-				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
+				<button type="button" class="" style="text-align: center;">Manufacturing</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p></p>
