--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<section class="wrapper style3 container special">
 
 				<header class="major">
-					<h2><strong>Lifecycle Flowchart - Synthetic Insulin</strong></h2>
+					<h2><strong>Lifecycle Flowchart - Insulin </strong></h2>
 					<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
 						src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FkgciKO4aWFQtEP2Yck3qYn%2FInsulin%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DON1VE7h6nfyjMhaX-1"
 						allowfullscreen></iframe>
