--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black">
-						Insulin is a peptide hormone, meaning the primary structure of the protein consists of amino acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of water is released, as shown in the model. 
+						Insulin is a peptide hormone, meaning the primary structure of the protein consists of amino
+						acids (51 Amino Acids, 17 Proteinogenic Amino Acids) chained to each other and joined by peptide
+						bonds. When one amino acid reacts with another, a covalent bond is formed and a molecule of
+						water is released, as shown in the model.
 						<br>
 						<br>
-						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are being covalently connected by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
+						The 51 Amino Acids are arranged in two chains (A chain and B chain) that are covalently bonded
+						by two disulfide bonds. 21 amino acids are located in chain A and 30 in chain B. Within chain A
+						there is also an internal disulfide bridge connecting A6 (acid number 6) to A11.
 						<br>
 						<br>
 						Insulin is a <strong>PROTEIN</strong> molecule.
@@ -64,33 +69,44 @@
 				<div class="content" style="background-color: gray;">
 					<br>
 					<p style="font-size: small; color: black">
-						(4S)-4-[[2-[[(1R,6R,12S,15S,18S,21S,24S,27S,30S,33S,36S,39S,42R,47R,50S,53S,56S,59S,62S,65S,68S,71S,74S,77S,80S,83S,88R)-88-[[(2S)-5-amino-2-[[(2S)-2-[[(2S)-2-[[(2S,3R)-2-[(2-aminoacetyl)amino]-3-methylpentanoyl]amino]-3-methylbutanoyl]amino]-4-carboxybutanoyl]amino]-5-oxopentanoyl]amino]-6-[[(2S)-2-[[(2S)-2-[[(2S)-5-amino-2-[[(2S)-3-amino-2-[[(2S)-2-[[(2S)-2-amino-3-phenylpropanoyl]amino]-3-methylbutanoyl]amino]-3-oxopropanoyl]amino]-5-oxopentanoyl]amino]-3-(1H-imidazol-4-yl)propanoyl]amino]-4-methylpentanoyl]amino]-47-[[(1S)-3-amino-1-carboxy-3-oxopropyl]carbamoyl]-53-(2-amino-2-oxoethyl)-62-(3-amino-3-oxopropyl)-77-[(2R)-butan-2-yl]-24,56-bis(2-carboxyethyl)-83-[(1S)-1-hydroxyethyl]-12,71,80-tris(hydroxymethyl)-33,50,65-tris[(4-hydroxyphenyl)methyl]-15-(1H-imidazol-4-ylmethyl)-27-methyl-18,30,36,59,68-pentakis(2-methylpropyl)-7,10,13,16,19,22,25,28,31,34,37,40,49,52,55,58,61,64,67,70,73,76,79,82,85,87-hexacosaoxo-21,39-di(propan-2-yl)-3,4,44,45,90,91-hexathia-8,11,14,17,20,23,26,29,32,35,38,41,48,51,54,57,60,63,66,69,72,75,78,81,84,86-hexacosazabicyclo[72.11.7]dononacontane-42-carbonyl]amino]acetyl]amino]-5-[[(2S)-1-[[2-[[(2S)-1-[[(2S)-1-[[(2S)-1-[[(2S,3S)-1-[(2S)-2-[[(2S)-6-amino-1-[[(1S,2S)-1-carboxy-2-hydroxypropyl]amino]-1-oxohexan-2-yl]carbamoyl]pyrrolidin-1-yl]-3-hydroxy-1-oxobutan-2-yl]amino]-3-(4-hydroxyphenyl)-1-oxopropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-2-oxoethyl]amino]-5-carbamimidamido-1-oxopentan-2-yl]amino]-5-oxopentanoic acid
+						(4S)-4-[[2-[[(1R,6R,12S,15S,18S,21S,24S,27S,30S,33S,36S,39S,42R,47R,50S,53S,56S,59S,62S,65S,68S,71S,74S,77S,80S,83S,88R)-88-[[(2S)-5-amino-2-[[(2S)-2-[[(2S)-2-[[(2S,3R)-2-[(2-aminoacetyl)amino]-3-methylpentanoyl]amino]-3-methylbutanoyl]amino]-4-carboxybutanoyl]amino]-5-oxopentanoyl]amino]-6-[[(2S)-2-[[(2S)-2-[[(2S)-5-amino-2-[[(2S)-3-amino-2-[[(2S)-2-[[(2S)-2-amino-3-phenylpropanoyl]amino]-3-methylbutanoyl]amino]-3-oxopropanoyl]amino]-5-oxopentanoyl]amino]-3-(1H-imidazol-4-yl)propanoyl]amino]-4-methylpentanoyl]amino]-47-[[(1S)-3-amino-1-carboxy-3-oxopropyl]carbamoyl]-53-(2-amino-2-oxoethyl)-62-(3-amino-3-oxopropyl)-77-[(2R)-butan-2-yl]-24,56-bis(2-carboxyethyl)-83-[(1S)-1-hydroxyethyl]-12,71,80-tris(hydroxymethyl)-33,50,65-tris[(4-hydroxyphenyl)methyl]-15-(1H-imidazol-4-ylmethyl)-27-methyl-18,30,36,59,68-pentakis(2-methylpropyl)-7,10,13,16,19,22,25,28,31,34,37,40,49,52,55,58,61,64,67,70,73,76,79,82,85,87-hexacosaoxo-21,39-di(propan-2-yl)-3,4,44,45,90,91-hexathia-8,11,14,17,20,23,26,29,32,35,38,41,48,51,54,57,60,63,66,69,72,75,78,81,84,86-hexacosazabicyclo[72.11.7]dononacontane-42-carbonyl]amino]acetyl]amino]-5-[[(2S)-1-[[2-[[(2S)-1-[[(2S)-1-[[(2S)-1-[[(2S,3S)-1-[(2S)-2-[[(2S)-6-amino-1-[[(1S,2S)-1-carboxy-2-hydroxypropyl]amino]-1-oxohexan-2-yl]carbamoyl]pyrrolidin-1-yl]-3-hydroxy-1-oxobutan-2-yl]amino]-3-(4-hydroxyphenyl)-1-oxopropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-1-oxo-3-phenylpropan-2-yl]amino]-2-oxoethyl]amino]-5-carbamimidamido-1-oxopentan-2-yl]amino]-5-oxopentanoic
+						acid
 					</p>
 					<br>
 					<h1 style="color:black">IUPAC:</h1>
 					<br>
-					<p style="color:black">L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine (7->7'),(19->20')-bis(disulfide) compound with glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine (6'->11')-disulfide</p>
+					<p style="color:black">
+						L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine
+						(7->7'),(19->20')-bis(disulfide) compound with
+						glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine
+						(6'->11')-disulfide</p>
 				</div>
-				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun Facts?</button>
+				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun
+					Facts?</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">		
+					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">
 					<p style="color:black">
-						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
-					</p>			
-					<img src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
+						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the
+						C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
+					</p>
+					<img
+						src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
 					<p style="color:black">
-						The diagram above is of insulin, it acurately shows the different amino acids present in the compound and the disulfide bonds formed between the amino acids.
+						The diagram above is of insulin, it acurately shows the different amino acids present in the
+						compound and the disulfide bonds formed between the amino acids.
 					</p>
 					<img src="lewisdrawing.pdf">
-						<p style="color:black">
-							The image above is my drawing of the lewis structure for the insulin. The molecular formula for insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
+					<p style="color:black">
+						The image above is my drawing of the lewis structure for the insulin. The molecular formula for
+						insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
 
-							The key structural features of insulin are peptide bonds between each amino acid and disulfide bonds between chain A and chain B. 
-						</p>
+						The key structural features of insulin are peptide bonds between each amino acid and disulfide
+						bonds between chain A and chain B.
+					</p>
 				</div>
 			</section>
- 
+
 
 			<!-- Three -->
 			<section class="wrapper style3 container special">
@@ -102,21 +118,42 @@
 						allowfullscreen></iframe>
 
 				</header>
-				<button type="button" class="" style="text-align: center;">Production(Within the Human Body)</button>
+				<button type="button" class="collapsible" style="text-align: center;">Production(Within the Human
+					Body)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p style="color:black;">Within the human body, glucose enters the beta cells which creates insulin. </p>
+					<p style="color:black;">
+						In our body, insulin is produced in the pancreas. When blood sugar levels in our body spike, the pancreas produces more insulin as it allows cells in the body to use glucose as a source of energy.
+						<br><br>
+						Beta cells in the pancreas are what is responsible for the production of insulin. During the production of insulin, it's first synthesized as preproinsulin and processed into proinsulin/insulin. The C-peptide and insulin cells are then stored, awaiting release. 
+					</p>
 				</div>
 
-				<button type="button" class="" style="text-align: center;">Production(Synthetic Insulin)</button>
+				<button type="button" class="collapsible" style="text-align: center;">Production(Synthetic
+					Insulin)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p style="color:black;">Within the human</p>
+					<p style="color:black;">A common method of creating synthetic insulin is creating the A and B chains separately through synthesizing the DNA of the molecules in an amino acid sequencing machine. The process is as follows: 
+					<br>
+					DNA molecules are inserted into plasmids
+					<br>
+					The plasmids are placed into escherichia coli bacteria, which is then placed next to the lacZ gene and methionine. This is when the protein begins forming.
+					<br>
+					E. Coli bacteria is being transfected by the plasmids and then fermented in large tanks, constanlty replicating through cell mitosis. This is the step that requires a lot of water, creates chemical and bio-hazardous waste, requires significant energy and also produces lots of green houses gases.
+					<br>
+					The cells are taken out of the tank and trated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to seperate from the bacteria.
+					<br>
+					The two chains then under go a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
+					<br><br>
+					<strong>Proinsulin</strong> - is the other way synthetic insulin is made. The process of transfecting the E. coli bacteria remains the same, however the amino acid machine synthesizes the proinsulin gene rather then the A and B chains separately. As shown in the diagrams above, the difference between proinsulin and insulin is the C-Peptide, which is spliced away with an enzyme. 
+				</p>
 				</div>
-				<button type="button" class="" style="text-align: center;">Manufacturing</button>
+				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p></p>
+					<p>
+						The difference between pre and proinsulin is the C-peptide connecting the A and B chains. An enzyme splices this peptide bond away, creating separate insulin and C-peptide molecules. These molecules are then stored in your body, interestingly the amount of C-peptide and insulin that is produced is the same which is why C-peptide tests can determine if your body has the ability to make insulin.
+					</p>
 				</div>
 
 
@@ -124,10 +161,10 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black;">
-						Within our body insulin is distributed throughout he blood stream and moves glucose from our blood to our liver. 
-
+						Within our body insulin is distributed throughout he blood stream and moves glucose from our
+						blood to our liver.
 						<br><br>
-						Insulin pumps and other diabetic medications are distributed over the counter. 
+						Insulin pumps and other diabetic medications are distributed over the counter.
 					</p>
 				</div>
 
@@ -136,9 +173,16 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color: black">
-						Insulin is an extremely important part of our digestive system as it moves around glucose cells and balances the amount of blood sugar we have throughout our system. When people don't have enough insulin in their system, they must increase their insulin intake through insulin pumps.
+						Insulin is an extremely important part of our digestive system as it moves around glucose cells
+						and balances the amount of blood sugar we have throughout our system. When people don't have
+						enough insulin in their system, they must increase their insulin intake through insulin pumps.
 						<br><br>
-						After insulin is created and used, our body disposes of it through metabolic waste. Insulin helped store energy as glycogen, which is used in the creation of insulin. This may be considered both a closed and open loop: The creation of insulin in our body is an open loop as we take in carbohydrates, create glucose, which triggers our pancreas to create insulin to balance the glucose in our body. Finally the insulin is disposed of through metabolic waste. However, insulin is how our cells get energy which is needed in the process of creating insulin.
+						After insulin is created and used, our body disposes of it through metabolic waste. Insulin
+						helped store energy as glycogen, which is used in the creation of insulin. This may be
+						considered both a closed and open loop: The creation of insulin in our body is an open loop as
+						we take in carbohydrates, create glucose, which triggers our pancreas to create insulin to
+						balance the glucose in our body. Finally the insulin is disposed of through metabolic waste.
+						However, insulin is how our cells get energy which is needed in the process of creating insulin.
 					</p>
 				</div>
 
@@ -147,16 +191,18 @@
 					<br>
 					<p style="color: black">
 						In our body insulin is disposed of through metabolic waste.
-						
+
 						<br><br>
-						Insulin pumps and such are bio-hazardous sharps as they get infected with blood. This means they must be incinerated in order to be properly disposed of. 
+						Insulin pumps and such are bio-hazardous sharps as they get infected with blood. This means they
+						must be incinerated in order to be properly disposed of.
 					</p>
 				</div>
 
 
 				<footer class="major">
 					<ul class="buttons">
-						<li><a href="https://docs.google.com/document/d/1rqcobhy8M5R-1Q0aZbxaagLns5j56HCiJM86cPlLSkA/edit?usp=sharing" class="button">Sources</a></li>
+						<li><a href="https://docs.google.com/document/d/1rqcobhy8M5R-1Q0aZbxaagLns5j56HCiJM86cPlLSkA/edit?usp=sharing"
+								class="button">Sources</a></li>
 					</ul>
 				</footer>
 
