--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p>
+					<p style="color:black;">
 						The difference between pre and proinsulin is the C-peptide connecting the A and B chains. An enzyme splices this peptide bond away, creating separate insulin and C-peptide molecules. These molecules are then stored in your body, interestingly the amount of C-peptide and insulin that is produced is the same which is why C-peptide tests can determine if your body has the ability to make insulin.
 					</p>
 				</div>
