--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<br>
 					E. Coli bacteria is being transfected by the plasmids and then fermented in large tanks, constanlty replicating through cell mitosis. This is the step that requires a lot of water, creates chemical and bio-hazardous waste, requires significant energy and also produces lots of green houses gases.
 					<br>
-					The cells are taken out of the tank and trated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to seperate from the bacteria.
+					The cells are taken out of the tank and concentrated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to seperate from the bacteria.
 					<br>
 					The two chains then under go a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
 					<br><br>
