--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
 					Insulin)</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
-					<p style="color:black;">A common method of creating synthetic insulin is creating the A and B chains separately through synthesizing the DNA of the molecules in an amino acid sequencing machine. The process is as follows: 
+					<p style="color:black;">A common method of creating synthetic insulin is creating the A and B chains separately by synthesizing the DNA of the molecules in an amino acid sequencing machine. The process is as follows: 
 					<br>
 					DNA molecules are inserted into plasmids
 					<br>
-					The plasmids are placed into escherichia coli bacteria, which is then placed next to the lacZ gene and methionine. This is when the protein begins forming.
+					The plasmids are placed into Escherichia coli bacteria, which is then placed next to the lacZ gene and methionine. This is when the protein begins forming.
 					<br>
-					E. Coli bacteria is being transfected by the plasmids and then fermented in large tanks, constanlty replicating through cell mitosis. This is the step that requires a lot of water, creates chemical and bio-hazardous waste, requires significant energy and also produces lots of green houses gases.
+					E. Coli bacteria are being transfected by the plasmids and then fermented in large tanks, constantly replicating through cell mitosis. This is the step that requires a lot of water, creates chemical and bio-hazardous waste, requires significant energy and also produces lots of greenhouses gases.
 					<br>
-					The cells are taken out of the tank and concentrated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to seperate from the bacteria.
+					The cells are taken out of the tank and concentrated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to separate from the bacteria.
 					<br>
 					The two chains then under go a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
 					<br><br>
-					<strong>Proinsulin</strong> - is the other way synthetic insulin is made. The process of transfecting the E. coli bacteria remains the same, however the amino acid machine synthesizes the proinsulin gene rather then the A and B chains separately. As shown in the diagrams above, the difference between proinsulin and insulin is the C-Peptide, which is spliced away with an enzyme. 
+					<strong>Proinsulin</strong> - is the other way synthetic insulin is made. The process of transfecting the E. coli bacteria remains the same, however the amino acid machine synthesizes the proinsulin gene rather than the A and B chains separately. As shown in the diagrams above, the difference between proinsulin and insulin is the C-Peptide, which is spliced away with an enzyme. 
 				</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
@@ -178,9 +178,9 @@
 						enough insulin in their system, they must increase their insulin intake through insulin pumps.
 						<br><br>
 						After insulin is created and used, our body disposes of it through metabolic waste. Insulin
-						helped store energy as glycogen, which is used in the creation of insulin. This may be
+						helps store energy as glycogen, which is used in the creation of insulin. This may be
 						considered both a closed and open loop: The creation of insulin in our body is an open loop as
-						we take in carbohydrates, create glucose, which triggers our pancreas to create insulin to
+						we take in carbohydrates, and create glucose which triggers our pancreas to create insulin to
 						balance the glucose in our body. Finally the insulin is disposed of through metabolic waste.
 						However, insulin is how our cells get energy which is needed in the process of creating insulin.
 					</p>
