--- a/index.html
+++ b/index.html
@@ -79,19 +79,25 @@
 						L-phenylalanyl-L-valyl-2-carbamoyl-L-glycyl-L-glutaminyl-L-histidyl-L-leucyl-L-cysteinyl-glycyl-L-seryl-L-histidyl-L-leucyl-L-valyl-L-alpha-glutamyl-L-alanyl-L-leucyl-L-tyrosyl-L-leucyl-L-valyl-L-cysteinyl-glycyl-L-alpha-glutamyl-L-arginyl-glycyl-L-phenylalanyl-L-phenylalanyl-L-tyrosyl-L-allothreonyl-L-prolyl-L-lysyl-L-allothreonine
 						(7->7'),(19->20')-bis(disulfide) compound with
 						glycyl-L-alloisoleucyl-L-valyl-L-alpha-glutamyl-L-glutaminyl-L-cysteinyl-L-cysteinyl-L-allothreonyl-L-seryl-L-alloisoleucyl-D-cysteinyl-L-seryl-L-leucyl-L-tyrosyl-L-glutaminyl-L-leucyl-L-alpha-glutamyl-L-asparagyl-L-tyrosyl-L-cysteinyl-L-asparagine
-						(6'->11')-disulfide</p>
+						(6'->11')-disulfide
+						<br><br>
+						(PubChem, 2019)
+					</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">2-D Structure Diagrams & Fun
 					Facts?</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<img src="https://proteopedia.org/wiki/images/thumb/d/db/Proinsulin.jpg/400px-Proinsulin.jpg">
+					<p style="color:black"><sub>(Theis et al., 2024)</sub></p>
 					<p style="color:black">
 						The diagram above is of proinsulin. This is when insulin is a single chain and connected by the
 						C-peptide or C domain. Production of insulin in the body will be touched on in depth later.
 					</p>
 					<img
 						src="https://labster-image-manager.s3.amazonaws.com/v2/THE/a9a893b5-72d4-4e91-89ce-a84a95eb943d/BSL_Insulin.en.x1024.png">
+					<p style="color:black"><sub>(Insulin-Structure - Labster Theory, n.d.)</sub></p>
+
 					<p style="color:black">
 						The diagram above is of insulin, it acurately shows the different amino acids present in the
 						compound and the disulfide bonds formed between the amino acids.
@@ -103,6 +109,8 @@
 
 						The key structural features of insulin are peptide bonds between each amino acid and disulfide
 						bonds between chain A and chain B.
+						<br><br>
+						(PubChem, 2019)
 					</p>
 				</div>
 			</section>
@@ -193,8 +201,10 @@
 						In our body insulin is disposed of through metabolic waste.
 
 						<br><br>
-						Insulin pumps and such are bio-hazardous sharps as they get infected with blood. This means they
-						must be incinerated in order to be properly disposed of.
+						Insulin syringes and such are bio-hazardous sharps as they get infected with blood. This means they
+						must be incinerated in order to be properly disposed of. For patients undergoing insulin pump therapy and using omnipods, the environmental impact is very low. First, the replacement for the device takes around 4 years and 90% of the device can be recycled.
+						<br><br>
+						<sub>(Pfützner et al., 2011)</sub>
 					</p>
 				</div>
 
